[tool.poetry]
name = "moma"
version = "0.1.0"
description = "Python environment for moma project"
authors = ["AlejandraLLI <alelli3@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
click = "^7.0"
dynaconf = "^2.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"
sphinx = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
